[gd_scene load_steps=41 format=2]

[ext_resource path="res://Player/Walking Animation/walking4.png" type="Texture" id=1]
[ext_resource path="res://Player/Walking Animation/walking1.png" type="Texture" id=2]
[ext_resource path="res://Player/Walking Animation/walking3.png" type="Texture" id=3]
[ext_resource path="res://Player/Walking Animation/walking2.png" type="Texture" id=4]
[ext_resource path="res://Player/Lights.gd" type="Script" id=5]
[ext_resource path="res://Player/Light/Lucky 7/lucky5.png" type="Texture" id=6]
[ext_resource path="res://Player/Light/Lucky 7/lucky7.png" type="Texture" id=7]
[ext_resource path="res://Player/Light/Lucky 7/lucky1.png" type="Texture" id=8]
[ext_resource path="res://Player/Light/Lucky 7/lucky3.png" type="Texture" id=9]
[ext_resource path="res://Player/Light/Lucky 7/lucky2.png" type="Texture" id=10]
[ext_resource path="res://Player/Light/Lucky 7/lucky4.png" type="Texture" id=11]
[ext_resource path="res://Player/Light/Lucky 7/lucky6.png" type="Texture" id=12]
[ext_resource path="res://Player/Robot.gd" type="Script" id=13]
[ext_resource path="res://Player/Light/numbers1.png" type="Texture" id=14]
[ext_resource path="res://Player/Light/numbers6.png" type="Texture" id=15]
[ext_resource path="res://Player/Light/numbers2.png" type="Texture" id=16]
[ext_resource path="res://Player/Light/numbers0.png" type="Texture" id=17]
[ext_resource path="res://Player/Light/numbers4.png" type="Texture" id=18]
[ext_resource path="res://Player/Light/numbers3.png" type="Texture" id=19]
[ext_resource path="res://Player/Light/numbers5.png" type="Texture" id=20]
[ext_resource path="res://Player/Idle Animation/idle2.png" type="Texture" id=21]
[ext_resource path="res://Player/Idle Animation/idle3.png" type="Texture" id=22]
[ext_resource path="res://Player/Idle Animation/idle1.png" type="Texture" id=23]
[ext_resource path="res://Player/Idle Animation/idle4.png" type="Texture" id=24]
[ext_resource path="res://Player/Wall Slide Animation/wall_slide1.png" type="Texture" id=25]
[ext_resource path="res://Player/Wall Slide Animation/wall_slide2.png" type="Texture" id=26]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight2.png" type="Texture" id=27]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight1.png" type="Texture" id=28]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight5.png" type="Texture" id=29]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight6.png" type="Texture" id=30]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight7.png" type="Texture" id=31]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight4.png" type="Texture" id=32]
[ext_resource path="res://Player/Light/Lucky 7/BodyLights/bodylight3.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walking",
"speed": 7.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "wall_slide",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 27 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.0
height = 2.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision_mask = 4
script = ExtResource( 13 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "wall_slide"
playing = true

[node name="Lights" type="Node2D" parent="Body"]
script = ExtResource( 5 )

[node name="Lucky" type="AnimatedSprite" parent="Body/Lights"]
frames = SubResource( 2 )
frame = 5
playing = true

[node name="LuckyBody" type="AnimatedSprite" parent="Body/Lights"]
position = Vector2( 1, 3 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="Numbers" type="AnimatedSprite" parent="Body/Lights"]
visible = false
frames = SubResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="Feet" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 2147483649
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.11
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="DamageFlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FreezeTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.2
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="LeftDetector" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, 0.15 )
enabled = true
collision_mask = 4

[node name="RightDetector" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2( 1, 0.15 )
enabled = true
collision_mask = 4

[node name="BulletStart" type="Node2D" parent="."]
position = Vector2( 2, 4 )
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_WallJumpTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DamageFlashTimer" to="." method="_on_DamageFlashTimer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
